# hermind

./: .gitignore  .golangci.yml  .goreleaser.yml  .stignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  README.zh-CN.md  TODOS.md  build.bat  config.yaml  flake.nix  go.mod  go.sum  integration_test.go  pantheonadapter_coverage.html
.claude/: settings.local.json
.gpowers/: go-server-gap.md
.hermind/: config.yaml  state.db
.playwright-mcp/: page-2026-05-15T09-56-44-507Z.yml  page-2026-05-15T10-04-02-186Z.yml
.stfolder/: syncthing-folder-7d5826.txt
agent/: budget.go  budget_test.go  compression.go  compression_test.go  conversation.go  conversation_judge.go  conversation_judge_flow_test.go  conversation_judge_llm.go  conversation_judge_llm_test.go  conversation_judge_test.go  conversation_test.go  credpool.go  engine.go  engine_callbacks_test.go  engine_judge_test.go  engine_test.go  ensure_session_test.go  insights.go  judge_shim.go  memory_feedback.go  memory_feedback_test.go  memory_manager.go  memory_manager_test.go  phase12b_test.go  pricing.go  prompt.go  prompt_test.go  redact.go  routing.go  synergy.go  title.go  title_test.go  tool_selector.go  trajectory.go
api/: auth.go  auth_test.go  dto.go  dto_test.go  fixture_gen_test.go  handlers_auxiliary.go  handlers_auxiliary_test.go  handlers_browser_extension.go  handlers_browser_extension_test.go  handlers_config.go  handlers_config_schema.go  handlers_config_schema_test.go  handlers_config_test.go  handlers_conversation.go  handlers_conversation_test.go  handlers_fallback_providers_models.go  handlers_fallback_providers_models_test.go  handlers_feedback.go  handlers_feedback_test.go  handlers_generated_files.go  handlers_generated_files_test.go  handlers_health.go  handlers_health_test.go  handlers_messages.go  handlers_meta.go  handlers_platforms.go  handlers_platforms_test.go  handlers_providers.go  handlers_providers_models.go  handlers_providers_models_test.go  handlers_providers_test_endpoint.go  handlers_render.go  handlers_render_math.go  handlers_render_mermaid.go  handlers_render_test.go  handlers_session_run.go  handlers_session_run_test.go  handlers_sessions.go  handlers_sessions_test.go  handlers_skills.go  (+38 more)
backend/: .env.example  Makefile  go.mod  go.sum
benchmark/: dataset.go  dataset_test.go  judge.go  judge_test.go  report.go  report_test.go  runner.go  runner_test.go  types.go
browser-extension/: README.md  background.js  content.js  index.html  manifest.json  options.css  options.html  options.js  package-lock.json  package.json  popup.css  popup.html  popup.js  vite.config.js
cli/: acp.go  acp_test.go  app.go  app_test.go  auth.go  batch.go  batch_test.go  bench.go  bootstrap.go  config.go  cron.go  desktop.go  doctor.go  engine_deps.go  engine_deps_test.go  engine_e2e_test.go  gateway.go  gateway_build.go  gateway_build_test.go  gateway_test.go  listen.go  listen_test.go  mcp.go  mcp_test.go  models.go  plugins.go  provider_builder.go  reloader.go  reloader_test.go  repl.go  repl_test.go  replay.go  rl.go  root.go  run.go  setup.go  skills.go  skills_test.go  stub_provider.go  stub_provider_test.go  (+3 more)
config/: config.go  config_test.go  instance.go  instance_test.go  loader.go  loader_test.go  save.go  save_test.go
cron/: crontab.go  crontab_test.go  history.go  schedule.go  schedule_test.go  scheduler.go  scheduler_test.go
designs/: 2026-05-15-hermind-desktop-qt-design.md  2026-05-15-qt-desktop-rewrite-design.md  2026-05-15-qt-go-communication-analysis.md  2026-05-16-qt-desktop-qml-rewrite-design.md
desktop/: CMakeLists.txt  build-go.bat  build-go.sh
desktop-electron/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
desktop-qt/: desktop-qt.pro  main.cpp  main_window.cpp  main_window.h
desktop/packaging/macos/: Info.plist.in  build.sh
desktop/packaging/windows/: build.bat
desktop/qml/: AppWindow.qml  Theme.qml  main.qml  theme.qrc
desktop/qml/ChatMode/: AttachmentDropArea.qml  ChatWorkspace.qml  ConversationHeader.qml  EmptyState.qml  MessageBubble.qml  MessageList.qml  PromptInput.qml  StopButton.qml  StreamingCursor.qml  ToolCallCard.qml
desktop/qml/SettingsMode/: ConfigSection.qml  SettingsPanel.qml  SettingsSidebar.qml
desktop/qml/SettingsMode/editors/: AuxiliaryEditor.qml  DefaultModelEditor.qml  FallbackProviderEditor.qml  KeyedInstanceEditor.qml  ListElementEditor.qml  ProviderEditor.qml  SkillsSection.qml
desktop/qml/SettingsMode/fields/: BoolField.qml  EnumField.qml  FloatField.qml  MultiSelectField.qml  NumberField.qml  SecretField.qml  StringField.qml  TextAreaField.qml
desktop/qml/Shell/: Footer.qml  LanguageToggle.qml  ThemeToggle.qml  TopBar.qml
desktop/qml/components/: GlassPanel.qml  ScrollToBottomButton.qml  Toast.qml
desktop/resources/: resources.qrc  styles.qss
desktop/resources/i18n/: en.ts  zh_CN.ts
desktop/resources/themes/: dark.qss  light.qss
desktop/src/: AppState.cpp  AppState.h  CGOStreamReply.cpp  CGOStreamReply.h  HermindCGOClient.cpp  HermindCGOClient.h  HermindClient.cpp  HermindClient.h  HermindProcess.cpp  HermindProcess.h  SSEParser.cpp  SSEParser.h  ShortcutManager.cpp  ShortcutManager.h  Theme.cpp  Theme.h  TrayIcon.cpp  TrayIcon.h  appwindow.cpp  appwindow.h  chatwidget.cpp  chatwidget.h  codehighlighter.cpp  codehighlighter.h  configformengine.cpp  configformengine.h  conversationheader.cpp  conversationheader.h  emptystatewidget.cpp  emptystatewidget.h  go_callbacks.cpp  httplib.cpp  httplib.h  i18nmanager.cpp  i18nmanager.h  main.cpp  markdownrenderer.cpp  markdownrenderer.h  messagebubble.cpp  messagebubble.h  (+16 more)
desktop/tests/: test_httplib.cpp  test_sseparser.cpp
desktop/translations/: hermind_en.ts  hermind_zh_CN.qm  hermind_zh_CN.ts  translations.qrc
frontend/: index.html  package.json
gateway/: channels.go  dedup.go  dedup_test.go  gateway.go  gateway_test.go  platform.go  pump.go  pump_test.go  session.go  session_test.go  telegram.go
hermes-agent-go/: .gitignore  .golangci.yml  Makefile  go.mod  go.sum
hermind/: Makefile
(+4610 files in other folders)
